Fix: JWT 라이브러리 버전 변경에 따른 코드 수정